as2/5.1/modules/ROOT/pages/as2-connector-reference.adoc
= AS2 Connector Reference - Mule 4
:page-aliases: connectors::as2/as2-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Premium]

AS2 Connector Version 5.1.0


The main class of an extension, is the entry point from which configurations, connection providers, operations and sources are going to be declared.


Release Notes: xref:release-notes::connector/as2-connector-release-notes-mule-4.adoc[AS2 Connector Release Notes]

== Configurations
---
[[ListenerConfig]]
=== Listener Config


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ListenerConfig_async-mdn-connection-provider, Async Mdn Connection>>
 | The connection types to provide to this configuration. | | x
| HTTP Listener a| String | Reference to global HTTP Listener definition for our service endpoint used by partner for both action and signal messages. |  | x
| Inbound Request Authentication a| One of:

* <<AS2BasicAuthentication>> |  Authentication method to use for verifying the incoming HTTP request. |  |
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.
This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Partner Config - AS2 Partner Name a| String |  AS2 system identifier used for AS2-From and AS2-To headers. |  | x
| Partner Config - x509 Alias a| String |  Certificate and/or private key alias in the keystore. Is required if using signing or encryption. |  |
| Partner Config - email a| String |  Email address used as HTTP 'From' header when sending. |  | x
| Self Config - AS2 Partner Name a| String |  AS2 system identifier used for AS2-From and AS2-To headers. |  | x
| Self Config - x509 Alias a| String |  Certificate and/or private key alias in the keystore. Is required if using signing or encryption. |  |
| Self Config - email a| String |  Email address used as HTTP 'From' header when sending. |  | x
| Keystore Password a| String |  The password of the provided keystore. |  | x
| Keystore Path a| String |  The Absolute or relative path to the keystore containing certificates and private keys for self (this application) and the partner. |  | x
| Private Key Password a| String |  If the private key to be used for signing/encryption is password protected, provide that value here. |  |
|===

==== Connection Types
[[ListenerConfig_async-mdn-connection-provider]]
===== Async MDN Connection Provider


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  false |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service. This value is qualified by the #connectionTimeoutUnits |  30 |
| Connection Timeout Units a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #connectionTimeout |  SECONDS|
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time. By default the number of connections is unlimited. |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed. The value of this attribute is only used when persistent connections are enabled. This value is qualified by the #connectionIdleTimeoutUnits |  30 |
| Connection Idle Timeout Units a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #connectionIdleTimeoutUnits |  MINUTES |
| Proxy Config a| One of:

* <<proxy>>
* <<ntlm-proxy>> |  Reusable configuration element for outbound connections through a proxy. A proxy element must define a host name and a port attributes, and optionally can define a username and a password. |  |
| TLS Configuration a| <<Tls>> |  Reference to a TLS config element. This will enable HTTPS for this configuration. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, the deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===


==== Associated Sources
* <<as2-listener>>

---
[[MDNListenerConfig]]
=== MDN Listener Config


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| HTTP Listener a| String |  Reference to global HTTP Listener definition for our service endpoint used by a partner for both action and signal messages. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Partner Config - AS2 Partner Name a| String |  AS2 system identifier (used for AS2-From and AS2-To headers) |  | x
| Partner Config - x509 Alias a| String |  Certificate and/or private key alias in keystore (required if using signing or encryption) |  |
| Partner Config - email a| String |  Email address used as HTTP 'From' header when sending |  | x
| Self Config - AS2 Partner Name a| String |  AS2 system identifier (used for AS2-From and AS2-To headers)|  | x
| Self Config - x509 Alias a| String | Certificate and/or private key alias in keystore (required if using signing or encryption)|  |
| Self Config - email a| String |  Email address used as HTTP 'From' header when sending |  | x
| Keystore Password a| String |  The password of the provided keystore. |  | x
| Keystore Path a| String |  The Absolute or relative path to the keystore containing certificates and private keys for self(this application) and the partner. |  | x
| Private Key Password a| String |  If the private key to use for signing/encryption is password protected, provide that value here. |  |
|===



==== Associated Sources
* <<as2-mdn-listener>>

---
[[send-config]]
=== Send Config


This class represents an extension configuration, values set in this class are commonly used across multiple operations since they represent something core from the extension.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<send-config_connection, Outbound Connection Config>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
| Partner Config - AS2 Partner Name a| String |  AS2 system identifier (used for AS2-From and AS2-To headers)|  | x
| Partner Config - x509 Alias a| String |  Certificate and/or private key alias in keystore (required if using signing or encryption) |  |
| Partner Config - email a| String |  Email address used as HTTP 'From' header when sending |  | x
| Self Config - AS2 Partner Name a| String |  AS2 system identifier (used for AS2-From and AS2-To headers) |  | x
| Self Config - x509 Alias a| String |  Certificate and/or private key alias in keystore (required if using signing or encryption) |  |
| Self Config - email a| String |  Email address used as HTTP 'From' header when sending |  | x
| Subject a| String |  Free form text for MIME Subject header |  |
| MIC Signature Algorithm a| Enumeration, one of:

** MD5
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512
** UNSIGNED |  The algorithm to use when setting the message integrity check value |  UNSIGNED |
| MDN MIC Signature Algorithm a| Enumeration, one of:

** MD5
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512
** UNSIGNED |  Request partner to respond with a signed MDN using this algorithm for calculating MIC |  UNSIGNED |
| Encryption Algorithm a| Enumeration, one of:

** DES
** DES_EDE3
** RC2
** AES128_CBC
** AES192_CBC
** AES256_CBC
** AES128_CCM
** AES192_CCM
** AES256_CCM
** AES128_GCM
** AES192_GCM
** AES256_GCM
** AES256_WRAP
** CAST5
** UNENCRYPTED |  The Algorithm to use when encrypting the message to be sent |  UNENCRYPTED |
| Content Transfer Encoding a| Enumeration, one of:

** BASE64
** QUOTED_PRINTABLE
** SEVEN_BIT
** EIGHT_BIT
** BINARY |  The encoding to use on the content of AS2 message being sent. |  BINARY |
| Request A Receipt a| Enumeration, one of:

** NONE
** UNSIGNED
** SIGNED_OPTIONAL
** SIGNED_REQUIRED |  How the connector will behave based on the received receipts. |  UNSIGNED |
| Compression Type a| Enumeration, one of:

** NONE
** ZLIB |  The Compression type to use |  NONE |
| Receipt Delivery URL a| String |  The Asynchronous MDN delivery address which the mdn will be returned to. This should be the fully formed URL to the Async MDN Listener (AS2 Source Component). Ex: https://example.com/mdn It is only required if "Send With Async MDN" is used. |  |
| Keystore Password a| String |  The password of the provided keystore. |  | x
| Keystore Path a| String |  The Absolute or relative path to the keystore containing certificates and private keys for self(this application) and the partner. |  | x
| Private Key Password a| String |  If the private key to use for signing/encryption is password protected, provide that value here. |  |
|===

==== Connection Types
[[send-config_connection]]
===== Outbound Connection Config


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  false |
| Connection Timeout a| Number |  The timeout for establishing connections to the remote service. This value is qualified by the #connectionTimeoutUnits |  30 |
| Connection Timeout Units a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #connectionTimeout |  SECONDS |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time. By default the number of connections is unlimited. |  -1 |
| Connection Idle Timeout a| Number |  A timeout for how long a connection can remain idle before it is closed.
The value of this attribute is only used when persistent connections are enabled. This value is qualified by the #connectionIdleTimeoutUnits |  30 |
| Connection Idle Timeout Units a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  A time unit which qualifies the #connectionIdleTimeoutUnits |  MINUTES |
| Proxy Config a| One of:

* <<proxy>>
* <<ntlm-proxy>> |  Reusable configuration element for outbound connections through a proxy. A proxy element must define a host name and a port attributes, and optionally can define a username and a password. |  |
| Partner URL a| String |  Service endpoint URL to the partner. |  | x
| Outbound Request Authentication a| HttpRequestAuthentication |  Authentication method to use for the HTTP request. |  |
| TLS Configuration a| <<Tls>> |  Reference to a TLS config element. This will enable HTTPS for this configuration. |  |
| Reconnection a| <<Reconnection>> | When the application is deployed, a connectivity test is performed on all connectors. If set to true, the deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

== Supported Operations
* <<sendWithAsyncMdn>>
* <<sendWithSyncMdn>>



== Operations

[[sendWithAsyncMdn]]
=== Send With Async Mdn
`<as2-mule4:send-with-async-mdn>`


Performs the send async request using configuration, client and as2RequesterParameters and completes the callback accordingly.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior. |  |
| AS2 MIME Type a| String |  The content type of the Document being sent via AS2 (for example, application/EDI-X12). There are no restrictions on the content-type that are supported. |  #[payload.^mimeType] |
| Content Stream a| Binary |  The content InputStream to be sent. |  `#[payload]` |
| Content Description a| String |  Content MIME part content description |  |
| File Name a| String |  File name of the content stream. If not set, the content will be transferred without a filename. |  |
| Request Receipt a| Enumeration, one of:

** NONE
** UNSIGNED
** SIGNED_OPTIONAL
** SIGNED_REQUIRED |  How the connector will behave based on the received receipts. If the value set is NONE, no receipt is expected. " "UNSIGNED, expects the returned receipt to be unsigned. SIGNED_OPTIONAL, could have a signed or non-signed receipt." "SIGNED_REQUIRED expects a signed receipt and the application fails if this is not the case. |  |
| Require Processed a| Boolean |  Require Processed response in the MDN to continue the flow (otherwise there is an error) |  true |
| Connection Timeout a| Number |  An override for the timeout for establishing connections to the remote service as milliseconds. The default of 0 means this value will not be used to override the configuration. |  0 |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AS2SendAttributes>>
|===

=== For Configurations
* <<send-config>>

==== Throws
* AS2-MULE4:CONFIGURATION
* AS2-MULE4:UNAUTHORIZED
* AS2-MULE4:CONNECTIVITY
* AS2-MULE4:RETRY_EXHAUSTED


[[sendWithSyncMdn]]
=== Send With Sync Mdn
`<as2-mule4:send-with-sync-mdn>`

Performs the send sync request using configuration, client and as2RequesterParameters and completes the callback accordingly.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their associated behavior. |  |
| AS2 MIME Type a| String |  The content type of the Document being sent via AS2 (for example, application/EDI-X12). There are no restrictions on the content-type that are supported. |  #[payload.^mimeType] |
| Content Stream a| Binary |  The content InputStream to be sent. |  `#[payload]` |
| Content Description a| String |  Content MIME part content description |  |
| File Name a| String |  File name of the content stream. If not set, the content will be transferred without filename. |  |
| Request Receipt a| Enumeration, one of:

** NONE
** UNSIGNED
** SIGNED_OPTIONAL
** SIGNED_REQUIRED |  How the connector will behave based on the received receipts. If the value set is NONE, no receipt is expected. " "UNSIGNED, expects the returned receipt to be unsigned. SIGNED_OPTIONAL, could have a signed or non-signed receipt." "SIGNED_REQUIRED expects a signed receipt and the application fails if this is not the case. |  |
| Require Processed a| Boolean |  Require Processed response in the MDN to continue the flow (otherwise there is an error) |  true |
| Connection Timeout a| Number |  An override for the timeout for establishing connections to the remote service as milliseconds. The default of 0 means this value will not be used to override the configuration. |  0 |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AS2SendAttributes>>
|===

=== For Configurations
* <<send-config>>

==== Throws
* AS2-MULE4:CONFIGURATION
* AS2-MULE4:MIME_PARSE
* AS2-MULE4:UNAUTHORIZED
* AS2-MULE4:CONNECTIVITY
* AS2-MULE4:SIGNATURE_VERIFY
* AS2-MULE4:RETRY_EXHAUSTED


== Sources

[[as2-listener]]
=== As2 Listener
`<as2-mule4:as2-listener>`


Represents a listener for AS2 sender requests.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Path a| String |  This path will be appended to any path set in the listener configuration. |  / |
| Connection Timeout a| Number |  An override for the timeout for establishing connections to the remote service as milliseconds. The default of 0 means this value will not be used to override the configuration. |  0 |
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their associated behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AS2ListenerAttributes>>
|===

=== For Configurations
* <<ListenerConfig>>



[[as2-mdn-listener]]
=== As2 Mdn Listener
`<as2-mule4:as2-mdn-listener>`


Represents a MDN listener for AS2 listener requests

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Path a| String |  This path will be appended to any path set in the listener configuration. |  / |
| Output Mime Type a| String |  The mime type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Primary Node Only a| Boolean |  Whether this source should only be executed on the primary node when running in Cluster. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configure if repeatable streams should be used and their behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Binary
| Attributes Type a| <<AS2MdnAttributes>>
|===

=== For Configurations
* <<MDNListenerConfig>>



== Types
[[Tls]]
=== Tls

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations will be performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
=== Key Store

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location (which will be resolved relative to the current classpath and file system, if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file will be used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
=== Custom Ocsp Responder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
=== Crl File

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
| Count a| Number | How many reconnection attempts to make. |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute. |  |
|===

[[AS2ListenerAttributes]]
=== AS2 Listener Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| As2 Message Id a| String | AS2 unique message ID from receiver to sender. |  | x
| File Name a| String | Received file name. |  | x
| Mime Type a| String | Mime type, for example, application/xml and so forth.|  | x
| From Name a| String | AS2 Receiver name. |  | x
| Headers a| Object | AS2 http headers that elaborate the message format. |  | x
| Mdn Delivery Status a| Enumeration, one of:

** NONE
** SUCCESS
** FAILURE | AS2 message validation status |  | x
| To Name a| String | AS2 Sender name |  | x
|===

[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | The amount of memory that will be allocated to consume the stream and provide random access to it.
If the stream contains more data than can be fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | The maximum amount of memory to use. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value lower than or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed content on the disk is buffered. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering process-failed-message. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is stored. |  |
|===

[[AS2MdnAttributes]]
=== AS2 Mdn Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| As2 Message Id a| String | AS2 unique message ID from receiver to sender. |  | x
| Disposition Content a| Object | AS2 processed MDN report as headers. |  | x
| From Name a| String | AS2 Receiver name |  | x
| Headers a| Object | AS2 http headers that elaborate the message format. |  | x
| Mdn Alg a| Enumeration, one of:

** MD5
** SHA1
** SHA224
** SHA256
** SHA384
** SHA512
** UNSIGNED | AS2 message integrity check algorithm used |  | x
| Mdn Mic a| String | AS2 message integrity check hashcode |  | x
| Mdn Processed a| Boolean | AS2 message validation status | false |
| Original AS2 Message Id a| String | AS2 Message ID received |  | x
| Report Text a| String | MDN report text |  | x
| To Name a| String | AS2 Sender name |  | x
|===

[[AS2SendAttributes]]
=== AS2 Send Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| As2 Mdn Attributes a| <<AS2MdnAttributes>> | AS2 returned MDN attribute group |  | x
| As2 Message Id a| String | AS2 unique message ID from receiver to sender |  | x
| From Name a| String | AS2 receiver name |  | x
| Headers a| Object | AS2 http headers that elaborate the message format |  | x
| Msg MIC a| String | AS2 message integrity check hashcode |  | x
| Msg MIC Alg a| String | AS2 message integrity check algorithm used |  | x
| To Name a| String | AS2 sender name |  | x
|===

[[proxy]]
=== Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[ntlm-proxy]]
=== Ntlm Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Ntlm Domain a| String |  |  | x
| Host a| String |  |  | x
| Port a| Number |  |  | x
| Username a| String |  |  |
| Password a| String |  |  |
| Non Proxy Hosts a| String |  |  |
|===

[[AS2BasicAuthentication]]
=== AS2 Basic Authentication

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | Username to authenticate. |  | x
| Password a| String | Password of user to authenticate. |  | x
|===

[[SuccessStatusCodeValidator]]
=== Success Status Code Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Values a| String |  |  | x
|===

[[FailureStatusCodeValidator]]
=== Failure Status Code Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Values a| String |  |  | x
|===

== See Also

* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-as2-connector/[AS2 Connector in Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
